test/raw_tests/fails/purity_ko11.sol
contract D {
}

contract C {
  function f() public view { /* pure/view forbidden */
    D d = new D();
  }
}